Thu Jan 29 09:05:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:
        * tests/Bug_3559_Regression/check.cpp:
        * tests/Bug_3559_Regression/run_test.pl:
        * tests/Bug_3559_Regression/struct.idl:

          Added this regression test (No fix committed yet).

Wed Jan 28 08:53:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:

          Fixed compiler error on WinCE.

Wed Jan 28 23:18:40 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:

          Fixed #include of lowercase ace.h.

Wed Jan 28 20:22:51 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          These files moved here from $ACE_ROOT/bin, see bug 2748 and the
          ACE ChangeLog entry for Wed Jan 28 20:22:45 UTC 2009.

Wed Jan 28 14:32:17 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Transport_Connector.cpp:

          Fix fuzz errors.

Wed Jan 28 010:09:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3559_Regression:
        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:
        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.mpc:
        * tests/Bug_3559_Regression/run_test.pl:

          Added a new regression test for bug 3559.
          This test is there to check whether the logging framework
          logs timestamps when -ORBVerboseLogging and -ORBLogFile
          are set. The test initializes the ORB with -ORBVerboseLogging
          set to 0, 1 and 2. This test checks whether the logging flags are
          set properly and afterward it checks the generated log file.

Wed Jan 28 08:59:25 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/unbounded_sequence_cdr_ut.cpp:
